update more site

--- a/index.html
+++ b/index.html
@@ -231,25 +231,12 @@
                     </div>
                 </div>
             </a>
-            <div class="services__item services__item-5 wow animate__animated animate__fadeInUp">
-                <img src="./images/s5-877x1024.jpeg" alt="" class="services__img">
-                <div class="services__text">
-                    <div class="services__top">
-                        <span class="services__num">08</span>
-                        <h2 class="services__heading">Content Strategy</h2>
-                    </div>
-                    <div class="services__bottom">
-                        <i class="fa fa-arrow-right"></i>
-                        <i class="fa fa-angle-right"></i>
-                    </div>
-                </div>
-            </div>
-            <a href="https://minnielam90-react-moviebooking.vercel.app/" class="services__item services__item-6 wow animate__animated animate__fadeInUp">
-                <img src="./images/seatselection.jpg" alt="" class="services__img">
+            <a href="https://minnielam90-project-farmstead.vercel.app/" class="services__item services__item-7 wow animate__animated animate__fadeInUp">
+                <img src="./images/farmstead.jpg" alt="" class="services__img">
                 <div class="services__text">
                     <div class="services__top">
                         <span class="services__num"></span>
-                        <h2 class="services__heading">Ticket Booking</h2>
+                        <h2 class="services__heading">Farmstead</h2>
                     </div>
                     <div class="services__bottom">
                         <i class="fa fa-arrow-right"></i>
@@ -257,19 +244,33 @@
                     </div>
                 </div>
             </a>
-            <div class="services__item services__item-7 wow animate__animated animate__fadeInUp">
-                <img src="./images/s7-877x1024.jpeg" alt="" class="services__img">
+            <a href="https://minnielam90-project-cinema.vercel.app/" class="services__item services__item-5 wow animate__animated animate__fadeInUp">
+                <img src="./images/cinema.png" alt="" class="services__img">
                 <div class="services__text">
                     <div class="services__top">
-                        <span class="services__num">10</span>
-                        <h2 class="services__heading">Content Strategy</h2>
+                        <span class="services__num"></span>
+                        <h2 class="services__heading">Movie Booking</h2>
                     </div>
                     <div class="services__bottom">
                         <i class="fa fa-arrow-right"></i>
                         <i class="fa fa-angle-right"></i>
                     </div>
                 </div>
-            </div>
+            </a>
+            <a href="https://minnielam90-react-moviebooking.vercel.app/" class="services__item services__item-6 wow animate__animated animate__fadeInUp">
+                <img src="./images/seatselection.jpg" alt="" class="services__img">
+                <div class="services__text">
+                    <div class="services__top">
+                        <span class="services__num"></span>
+                        <h2 class="services__heading">Seat Selection</h2>
+                    </div>
+                    <div class="services__bottom">
+                        <i class="fa fa-arrow-right"></i>
+                        <i class="fa fa-angle-right"></i>
+                    </div>
+                </div>
+            </a>
+            
         </div>
     </section>
     <section class="customer">
