update link resume

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="banner__iphone">
                     <img src="./images/iphone-1.png" alt=""
                         class="banner__iphone-1 animate__animated animate__fadeInTopLeft">
-                    <img src="./images/iphone-2.png" alt=""
+                    <img src="./images/pic.jpg" alt=""
                         class="banner__iphone-2 animate__animated animate__fadeInBottomRight">
                 </div>
             </div>
@@ -305,7 +305,7 @@
             </div>
             
             <div class="view wow animate__animated animate__fadeInLeft">
-                <a href="#">Learn More</a>
+                <a href="https://drive.google.com/drive/folders/1NwWA929iCrIq416-i_38Sy-VyO3GqJJb?usp=sharing">Download Resume</a>
                 <div class="arrow">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
