--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                         <span></span>
                     </div>
                     <div class="header__language">
-                        <a href="#" class="header__select">Contact<i class="fa fa-angle-down"></i></a>
+                        <a href="#contact" class="header__select">Contact<i class="fa fa-angle-down"></i></a>
                         <ul class="header__list">
-                            <li><a href="#">Phone</a></li>
-                            <li><a href="#">Email</a></li>
+                            <li><a href="#contact">Phone</a></li>
+                            <li><a href="#contact">Email</a></li>
                         </ul>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                            
                     </h2>
                     <p class="banner__desc animate__animated animate__fadeInUp animate__fast">Transitioning from Thriving Entrepreneurship in Vietnam to Software Development in Scotland: Bringing a Wealth of Business Experience and a Passion for Innovation to the Tech World.</p>
-                    <a href="#" class="banner__view animate__animated animate__fadeInUp animate__fast">DISCOVER</a>
+                    <a href="#resume" class="banner__view animate__animated animate__fadeInUp animate__fast">DISCOVER</a>
                 </div>
                 <div class="banner__iphone">
                     <img src="./images/iphone-1.png" alt=""
@@ -361,17 +361,14 @@
     <section class="team">
         <div class="container">
             <div class="intro">
-                <h4 class="intro-title wow animate__animated animate__fadeInUp">MEET THE TEAM</h4>
+                <h4 class="intro-title wow animate__animated animate__fadeInUp">MY SKILLS</h4>
             </div>
             <div class="team__content">
                 <div class="team__item wow animate__fadeInLeft animate__animated">
                     <div class="team__top">
-                        <img src="./images/t1.jpeg" alt="" class="team__img">
+                        <img src="./images/htmlcss.png" alt="" class="team__img">
                         <div class="team__text">
-                            <p>Tortor non facilisi vel rhoncus consequat cum accumsan. Varius, phasellus Laoreet euismod
-                                sociosqu curabitur congue hac semper urna consectetuer orci tincidunt duis velit
-                                gravida,
-                                enim tempor viverra tortor euismod.</p>
+                            <p>Transitioning from Thriving Entrepreneurship in Vietnam to Software Development in Scotland: Bringing a Wealth of Business Experience and a Passion for Innovation to the Tech World</p>
                             <div class="team__share">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -379,17 +376,14 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="team__author">Tylor Katholling</h3>
-                    <p class="team__desc">Founder</p>
+                    <h3 class="team__author">HTML / CSS</h3>
+                    <p class="team__desc"></p>
                 </div>
                 <div class="team__item wow animate__fadeInLeft animate__animated animate__delay-1s">
                     <div class="team__top">
-                        <img src="./images/t2.jpeg" alt="" class="team__img">
+                        <img src="./images/react.png" alt="" class="team__img">
                         <div class="team__text">
-                            <p>Tortor non facilisi vel rhoncus consequat cum accumsan. Varius, phasellus Laoreet euismod
-                                sociosqu curabitur congue hac semper urna consectetuer orci tincidunt duis velit
-                                gravida,
-                                enim tempor viverra tortor euismod.</p>
+                            <p>Transitioning from Thriving Entrepreneurship in Vietnam to Software Development in Scotland: Bringing a Wealth of Business Experience and a Passion for Innovation to the Tech World</p>
                             <div class="team__share">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -397,17 +391,14 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="team__author">Tylor Katholling</h3>
-                    <p class="team__desc">Founder</p>
+                    <h3 class="team__author">ReactJS</h3>
+                    <p class="team__desc"></p>
                 </div>
                 <div class="team__item wow animate__fadeInLeft animate__animated animate__delay-2s">
                     <div class="team__top">
-                        <img src="./images/t3.jpeg" alt="" class="team__img">
+                        <img src="./images/nodejs.png" alt="" class="team__img">
                         <div class="team__text">
-                            <p>Tortor non facilisi vel rhoncus consequat cum accumsan. Varius, phasellus Laoreet euismod
-                                sociosqu curabitur congue hac semper urna consectetuer orci tincidunt duis velit
-                                gravida,
-                                enim tempor viverra tortor euismod.</p>
+                            <p>Transitioning from Thriving Entrepreneurship in Vietnam to Software Development in Scotland: Bringing a Wealth of Business Experience and a Passion for Innovation to the Tech World</p>
                             <div class="team__share">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -415,17 +406,14 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="team__author">Tylor Katholling</h3>
-                    <p class="team__desc">Founder</p>
+                    <h3 class="team__author">NodeJS</h3>
+                    <p class="team__desc"></p>
                 </div>
                 <div class="team__item wow animate__fadeInLeft animate__animated animate__delay-3s">
                     <div class="team__top">
-                        <img src="./images/t4.jpeg" alt="" class="team__img">
+                        <img src="./images/js.png" alt="" class="team__img">
                         <div class="team__text">
-                            <p>Tortor non facilisi vel rhoncus consequat cum accumsan. Varius, phasellus Laoreet euismod
-                                sociosqu curabitur congue hac semper urna consectetuer orci tincidunt duis velit
-                                gravida,
-                                enim tempor viverra tortor euismod.</p>
+                            <p>Transitioning from Thriving Entrepreneurship in Vietnam to Software Development in Scotland: Bringing a Wealth of Business Experience and a Passion for Innovation to the Tech World</p>
                             <div class="team__share">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -433,13 +421,13 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="team__author">Tylor Katholling</h3>
-                    <p class="team__desc">Founder</p>
+                    <h3 class="team__author">Javascript</h3>
+                    <p class="team__desc"></p>
                 </div>
             </div>
             <div class="team__view">
                 <div class="view wow animate__animated animate__fadeInLeft">
-                    <a href="#">View All Members</a>
+                    <a href="#resume">Learn More</a>
                     <div class="arrow">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -466,7 +454,7 @@
             </div>
         </div>
     </section>
-    <section class="business">
+    <!-- <section class="business">
         <div class="container">
             <div class="intro">
                 <h4 class="intro-title wow animate__animated animate__fadeInUp">SELECTED CLIENTS</h4>
@@ -514,7 +502,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="news">
         <div class="container">
             <div class="news__top">
@@ -593,13 +581,13 @@
         <div class="container">
             <div class="subscribe__view">
                 <h2 class="subscribe__mess">I am a web developer creating
-                    <span id="subscribe__renMess" data-mess="websites,apps,motion">
+                    <span id="subscribe__renMess" data-mess="websites,motion">
                         <span class="subscribe__cursor"></span>
                         <span class="subscribe__line">|.</span>
                     </span>
                 </h2>
                 <div class="view wow animate__animated animate__fadeInLeft">
-                    <a href="#">Start a Project</a>
+                    <a href="#contact">Contact me</a>
                     <div class="arrow">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -668,8 +656,9 @@
                             Highlands<br>
                             IV10 8SW<br>
                             Scotland<br><br>
-                            <i class="fa-solid fa-phone" style="margin-right: 5px"></i>+44 772 088 3604
-                            </li>
+                            <i class="fa-solid fa-phone" style="margin-right: 5px"></i>+44 772 088 3604<br>
+                            <i class="fa-regular fa-envelope" style="margin-right: 5px"></i>minnie.lam90@gmail.com
+                        </li>
                         <li class="footer__item"><a href="#" class="footer__link footer__map">View on Google Map</a>
                         </li>
                     </ul>
