--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li class="header__item"><a href="#portfolio" class="header__link">Portfolio</a></li>
                         <li class="header__item"><a href="#resume" class="header__link">Resume</a>
                         </li>
-                        <li class="header__item"><a href="#" class="header__link">Blog</a></li>
+                        <li class="header__item"><a href="#skills" class="header__link">My Skills</a></li>
                         <li class="header__item"><a href="#contact" class="header__link">Contact</a>
                         </li>
                     </ul>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div class="poryfolio__load">Load More</div>
+            <div class="portfolio__load">Load More</div>
         </div>
     </section>
     <section id="portfolio" class="services">
@@ -358,7 +358,7 @@
             </a>
         </div>
     </section>
-    <section class="team">
+    <section id="skills" class="team">
         <div class="container">
             <div class="intro">
                 <h4 class="intro-title wow animate__animated animate__fadeInUp">MY SKILLS</h4>
@@ -503,54 +503,53 @@
             </div>
         </div>
     </section> -->
-    <section class="news">
+    <section id="experiment" class="news">
         <div class="container">
             <div class="news__top">
-                <img src="./images/est.png" alt="Logo est" class="news__logo">
+                <img src="./images/leaf.png" alt="Logo est" class="news__logo">
                 <h2 class="news__heading">Thoughts & Experiments</h2>
             </div>
             <div class="news__content">
                 <div class="news__item wow animate__animated animate__fadeInRight">
                     <div class="news__img">
-                        <img src="./images/r14-760x630.jpeg" alt="">
+                        <img src="./images/client.jpg" alt="">
                         <div class="news__icon"><i class="fa fa-arrow-right"></i></div>
                     </div>
-                    <a href="#" class="news__creative">CREATIVITY</a>
-                    <a href="#" class="news__title">Sexbots and cybersex: Kate Davis explores “relationship
-                        replacements”</a>
-                    <p class="news__time">January 15, 2018</p>
+                    <a href="#" class="news__creative">DISCOVERY & PLANNING</a>
+                    <a href="#" class="news__title">Gather requirements, define goals, establish scope, budget, and timeline.</a>
+                    <p class="news__time">April 01, 2024</p>
                 </div>
                 <div class="news__item wow animate__animated animate__fadeInRight">
                     <div class="news__img">
-                        <img src="./images/jpg01.jpeg" alt="" class="news__img">
+                        <img src="./images/wireframe.jpg" alt="" class="news__img">
                         <div class="news__icon"><i class="fa fa-arrow-right"></i></div>
                     </div>
-                    <a href="#" class="news__creative">BRANDING</a>
-                    <a href="#" class="news__title">Apartamento at ten: a decade of celebrating the everyday home</a>
-                    <p class="news__time">January 15, 2018</p>
+                    <a href="#" class="news__creative">DESIGN & PROTOTYPING</a>
+                    <a href="#" class="news__title">Create wireframes, mockups, and prototypes; finalize design with client feedback.</a>
+                    <p class="news__time">April 01, 2024</p>
                 </div>
                 <div class="news__item wow animate__animated animate__fadeInRight">
                     <div class="news__img">
-                        <img src="./images/jpg02.jpeg" alt="" class="news__img">
+                        <img src="./images/code.jpg" alt="" class="news__img">
                         <div class="news__icon"><i class="fa fa-arrow-right"></i></div>
                     </div>
-                    <a href="#" class="news__creative">INSPIRATION</a>
-                    <a href="#" class="news__title">Aron Klein’s captivating images of the Bulgarian demon chasers</a>
-                    <p class="news__time">January 15, 2018</p>
+                    <a href="#" class="news__creative">DEVELOPMENT & IMPLEMENTATION</a>
+                    <a href="#" class="news__title">Design into code, build frontend/backend, conduct testing.</a>
+                    <p class="news__time">April 01, 2024</p>
                 </div>
                 <div class="news__item wow animate__animated animate__fadeInRight">
                     <div class="news__img">
-                        <img src="./images/r10-760x630.jpeg" alt="" class="news__img">
+                        <img src="./images/satisfaction.jpg" alt="" class="news__img">
                         <div class="news__icon"><i class="fa fa-arrow-right"></i></div>
                     </div>
-                    <a href="#" class="news__creative">ADVENTURE</a>
-                    <a href="#" class="news__title">Peter Funch shares the photo books that inspire his own practice</a>
-                    <p class="news__time">January 15, 2018</p>
+                    <a href="#" class="news__creative">DEPLOYMENT & MAINTENANCE</a>
+                    <a href="#" class="news__title">Configure servers, deploy website, provide ongoing maintenance and support.</a>
+                    <p class="news__time">April 01, 2024</p>
                 </div>
             </div>
             <div class="news__view">
                 <div class="view wow animate__animated animate__fadeInLeft">
-                    <a href="#">View All Members</a>
+                    <a href="#portfolio">Discover More</a>
                     <div class="arrow">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
