--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         <li class="header__item"><a href="#resume" class="header__link">Resume</a>
                         </li>
                         <li class="header__item"><a href="#skills" class="header__link">My Skills</a></li>
+                        <li class="header__item"><a href="#experiment" class="header__link">Thoughts and Experiments</a></li>
                         <li class="header__item"><a href="#contact" class="header__link">Contact</a>
                         </li>
                     </ul>
